tests/snapshots/cli__tests__only-matching-and-line-numbers-no-actions-outside-search-mode.snap
---
source: tests/cli.rs
expression: "CommandSnap\n{\n    args, stdin:\n    stdin.map(|s|\n    s.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec()), stdout:\n    stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr: []
---
args:
  - "--only-matching"
  - "--line-numbers"
stdin:
  - "A\n"
  - B
stdout:
  - "1:0-1:A\n"
  - "2:0-1:B"
exit_code: 0
